welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:11: error: not found: value getHauteurMonde
	var T = new Array[Color](getHauteurMonde())
                                 ^Array1:16: error: not found: value getLargeurMonde
	for (j <- 0 to getLargeurMonde()) {
                       ^